# Android_ffmpeg

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/chris/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFmpegPlayer.cpp  FFmpegPlayer.h  MyLog.h  native-lib.cpp
app/src/main/java/com/chris/ffmpeg/: FFmpegPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/chris/ffmpeg/: ExampleUnitTest.java
keystore/: keystore
